--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <title>DEVELOP DIARY</title>
 </head>
 <body>
-    <p>깃허브 테스트</p>
-    ㄹㄹㄹㄹㄹㄹㄹ
+    <p>깃허브 테스트222</p>
+    <P>깃허브 테스트 2222</P>
 </body>
 </html>
