시맨틱 태그 추가

--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
     <title>DEVELOP DIARY</title>
 </head>
 <body>
-    <p>깃허브 테스트222</p>
-    <P>깃허브 테스트 2222</P>
+    <header></header>
+    <nav></nav> 
+    <section></section>
 </body>
 </html>
