--- a/main.html
+++ b/main.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="main.css">
     <title>DEVELOP DIARY</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h3 id = "subtitle">CHOI KYUNG SOO</h3>
+        <h1 id = "title">DEVELOP DIARY</h1>
+    </header>
     <nav></nav> 
     <section></section>
 </body>
