--- a/main.html
+++ b/main.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, inital-scale = 1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="main.css">
+    <link type="text/css" rel="stylesheet" href="CSS/main.css">
     <title>DEVELOP DIARY</title>
 </head>
 <body>
     <header>
-        <h3 id = "subtitle">CHOI KYUNG SOO</h3>
-        <h1 id = "title">DEVELOP DIARY</h1>
+        <h3 id ="subtitle">CHOI KYUNG SOO</h3>
+        <h1 id ="title">DEVELOP DIARY</h1>
     </header>
     <nav></nav> 
     <section></section>
