폰트 추가 및 제목 header 완성

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h3 id ="subtitle">CHOI KYUNG SOO</h3>
+        <h3 id ="subtitle">C H O I &nbsp;  K Y U N G &nbsp;  S O O</h3>
         <h1 id ="title">DEVELOP DIARY</h1>
     </header>
     <nav></nav> 
