--- a/main.html
+++ b/main.html
@@ -10,10 +10,17 @@
 </head>
 <body>
     <header>
-        <h3 id ="subtitle">C H O I &nbsp;  K Y U N G &nbsp;  S O O</h3>
-        <h1 id ="title">DEVELOP DIARY</h1>
+        <a href="main.html"><h3 id ="subtitle">C H O I &nbsp;  K Y U N G &nbsp;  S O O</h3>
+        <h1 id ="title">DEVELOP DIARY</h1></a>
     </header>
-    <nav></nav> 
+    <nav id="menubar">
+        <ul> 
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Diary</a></li>
+            <li><a href="#">Contact Me</a></li>
+        </ul>
+    </nav> 
     <section></section>
 </body>
 </html>
