--- a/main.html
+++ b/main.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, inital-scale = 1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="JavaScript/main.js"></script>
     <link type="text/css" rel="stylesheet" href="CSS/main.css">
     <title>DEVELOP DIARY</title>
 </head>
-<body>
-    <header>
+<body onload="MenubarEvent()">
+    <header> 
         <a href="main.html"><h3 id ="subtitle">C H O I &nbsp;  K Y U N G &nbsp;  S O O</h3>
         <h1 id ="title">DEVELOP DIARY</h1></a>
     </header>
@@ -21,6 +22,8 @@
             <li><a href="#">Contact Me</a></li>
         </ul>
     </nav> 
-    <section></section>
+    <section>
+        <img id="mainProfile" src="Images/mainProfile.png">
+    </section>
 </body>
 </html>
