--- a/main.html
+++ b/main.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, inital-scale = 1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="JavaScript/main.js"></script>
     <link type="text/css" rel="stylesheet" href="CSS/main.css">
+    <script src="JavaScript/main.js"></script>
+    <script src="js/jquery-3.6.0.js"></script>
     <title>DEVELOP DIARY</title>
 </head>
-<body onload="MenubarEvent()">
+<body onload="MainProfileEvent()">
     <header> 
         <a href="main.html"><h3 id ="subtitle">C H O I &nbsp;  K Y U N G &nbsp;  S O O</h3>
         <h1 id ="title">DEVELOP DIARY</h1></a>
