--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="CSS/main.css">
     <script src="JavaScript/main.js"></script>
-    <script src="js/jquery-3.6.0.js"></script>
+    <script src="JQuery/jquery-3.6.0.js"></script>
+    <script src="JQuery/jquery.js"></script>
     <title>DEVELOP DIARY</title>
 </head>
 <body onload="MainProfileEvent()">
