--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="CSS/main.css">
     <title>DEVELOP DIARY</title>
 </head>
-<body onload="MainProfileEvent()">
+<body onload="init()">
     <header> 
         <a href="main.html"><h3 id ="subtitle">C H O I &nbsp;  K Y U N G &nbsp;  S O O</h3>
         <h1 id ="title">DEVELOP DIARY</h1></a>
