main에서 index로 이름 변경

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 </head>
 <body onload="init()">
     <header> 
-        <a href="main.html"><h3 id ="subtitle">C H O I &nbsp;  K Y U N G &nbsp;  S O O</h3>
+        <a href="index.html"><h3 id ="subtitle">C H O I &nbsp;  K Y U N G &nbsp;  S O O</h3>
         <h1 id ="title">DEVELOP DIARY</h1></a>
     </header>
     <nav id="menubar">
